--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Yew App</title>
+    <title>andrewwillette.com</title>
+	<link rel="stylesheet" href="index.css">
+	<link data-trunk rel="css" href="/css/main.css">
+
   </head>
 </html>
